# research

./: LICENSE  README.md
bounding-docs/: README.md
doc-explainer/: .gitignore  README.md  pyproject.toml
doc-explainer/src/dataset/: 00_prompting.py  01_docexplainer_test.py  02_ocr_naive.py  ocr_processor.py  prompt.py  utils.py
doc-explainer/src/doc_explainer/: __init__.py  metrics.py  model.py  type.py
doc-explainer/src/doc_explainer/models/: claude.py  constants.py  qwen.py  smol.py  utils.py
doc-explainer/src/doc_explainer/tests/: test_metrics.py  test_type.py
